// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ValuesOverrideArgumentsSetting should match snapshot 1`] = `
<body>
  <div>
    <section
      class="flex flex-col items-start"
    >
      <div
        class="flex w-full justify-between"
      >
        <div>
          <h1
            class="text-neutral text-2xl font-medium mb-2"
          >
            Value override as arguments
          </h1>
          <p
            class="mb-2 text-sm text-neutral-subtle"
          >
            Specify each override by declaring the variable name, value and its type.
          </p>
        </div>
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand-strong text-sm h-10 px-3 rounded-lg bg-surface-brand-solid hover:bg-surface-brand-solidHover border border-brand-component text-neutralInvert gap-2"
          type="button"
        >
          Add Variable
          <i
            aria-hidden="true"
            class="fa-regular fa-plus-circle "
          />
        </button>
      </div>
      <span
        aria-controls="radix-:r6:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="hover:text-brandHover mb-6 cursor-pointer text-sm font-medium text-brand transition"
        data-state="closed"
        type="button"
      >
        How it works 
        <i
          aria-hidden="true"
          class="fa-regular fa-circle-question text-xs"
        />
      </span>
      <button
        class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-8 px-2.5 rounded-md bg-surface-neutral border border-neutral hover:border-neutral-component hover:bg-surface-neutral-subtle data-[state=open]:bg-surface-neutral-subtle text-neutral mb-10 gap-2"
        type="button"
      >
        See default values.yaml 
        <i
          aria-hidden="true"
          class="fa-regular fa-arrow-up-right-from-square text-xs"
        />
      </button>
      <form
        class="w-full"
      >
        <ul>
          <li
            class="mb-3 grid grid-cols-[6fr_6fr_6fr_1fr] gap-x-2"
          >
            <span
              class="text-sm font-medium text-neutral-subtle"
            >
              Override type
            </span>
            <span
              class="text-sm font-medium text-neutral-subtle"
            >
              Variable
            </span>
            <span
              class="text-sm font-medium text-neutral-subtle"
            >
              Value
            </span>
            <span />
          </li>
          <li
            class="mb-3 last:mb-0"
          >
            <div
              class="grid grid-cols-[6fr_6fr_6fr_1fr] items-center gap-x-2"
            >
              <div
                class=" group relative flex items-center gap-4"
              >
                <select
                  class="h-9 w-full cursor-pointer appearance-none rounded border border-neutral bg-surface-neutral px-3 pr-6 text-sm text-neutral transition-colors hover:bg-surface-neutral-component focus:border-brand-strong focus:outline focus:outline-[2px] focus:outline-offset-0 focus:outline-brand-4 disabled:cursor-not-allowed disabled:bg-surface-neutral disabled:text-neutral-subtle disabled:hover:bg-surface-neutral"
                  data-testid="input-select-small"
                  name="arguments.0.type"
                >
                  <option
                    value="--set"
                  >
                    --set
                  </option>
                  <option
                    value="--set-string"
                  >
                    --set-string
                  </option>
                  <option
                    value="--set-json"
                  >
                    --set-json
                  </option>
                </select>
                <i
                  aria-hidden="true"
                  class="fa-regular fa-chevron-down pointer-events-none absolute right-3 top-2.5 translate-y-0.5 text-xs leading-3 text-neutral-subtle group-hover:text-neutral"
                />
              </div>
              <div
                class=""
                data-testid="input-small-wrapper"
              >
                <div
                  class="input input--small flex-grow"
                  data-testid="input"
                >
                  <label
                    class="hidden"
                  />
                  <input
                    autocomplete="off"
                    class="absolute left-0 top-0 h-full w-full rounded bg-transparent px-2 text-sm text-neutral placeholder:text-neutral-subtle"
                    data-testid="input-value"
                    name="arguments.0.key"
                    spellcheck="false"
                    type="text"
                    value="test"
                  />
                </div>
              </div>
              <input
                class="w-full"
                data-testid="field-variable-suggestion"
                name="arguments.0.value"
                value="test"
              />
              <button
                class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm px-2.5 rounded-md bg-surface-neutral border border-neutral hover:border-neutral-component hover:bg-surface-neutral-subtle data-[state=open]:bg-surface-neutral-subtle text-neutral h-[36px] w-[36px]"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="fa-regular fa-trash "
                />
              </button>
            </div>
          </li>
          <li
            class="mb-3 last:mb-0"
          >
            <div
              class="grid grid-cols-[6fr_6fr_6fr_1fr] items-center gap-x-2"
            >
              <div
                class=" group relative flex items-center gap-4"
              >
                <select
                  class="h-9 w-full cursor-pointer appearance-none rounded border border-neutral bg-surface-neutral px-3 pr-6 text-sm text-neutral transition-colors hover:bg-surface-neutral-component focus:border-brand-strong focus:outline focus:outline-[2px] focus:outline-offset-0 focus:outline-brand-4 disabled:cursor-not-allowed disabled:bg-surface-neutral disabled:text-neutral-subtle disabled:hover:bg-surface-neutral"
                  data-testid="input-select-small"
                  name="arguments.1.type"
                >
                  <option
                    value="--set"
                  >
                    --set
                  </option>
                  <option
                    value="--set-string"
                  >
                    --set-string
                  </option>
                  <option
                    value="--set-json"
                  >
                    --set-json
                  </option>
                </select>
                <i
                  aria-hidden="true"
                  class="fa-regular fa-chevron-down pointer-events-none absolute right-3 top-2.5 translate-y-0.5 text-xs leading-3 text-neutral-subtle group-hover:text-neutral"
                />
              </div>
              <div
                class=""
                data-testid="input-small-wrapper"
              >
                <div
                  class="input input--small flex-grow"
                  data-testid="input"
                >
                  <label
                    class="hidden"
                  />
                  <input
                    autocomplete="off"
                    class="absolute left-0 top-0 h-full w-full rounded bg-transparent px-2 text-sm text-neutral placeholder:text-neutral-subtle"
                    data-testid="input-value"
                    name="arguments.1.key"
                    spellcheck="false"
                    type="text"
                    value="test2"
                  />
                </div>
              </div>
              <button
                class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm px-2.5 rounded-md bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral h-[36px] justify-between"
                type="button"
              >
                Close json
                <i
                  aria-hidden="true"
                  class="fa-regular fa-angle-down "
                />
              </button>
              <button
                class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm px-2.5 rounded-md bg-surface-neutral border border-neutral hover:border-neutral-component hover:bg-surface-neutral-subtle data-[state=open]:bg-surface-neutral-subtle text-neutral h-[36px] w-[36px]"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="fa-regular fa-trash "
                />
              </button>
            </div>
            <textarea
              data-testid="code-editor-variable"
            >
              {"test": "test"}
            </textarea>
          </li>
          <li
            class="mb-3 last:mb-0"
          >
            <div
              class="grid grid-cols-[6fr_6fr_6fr_1fr] items-center gap-x-2"
            >
              <div
                class=" group relative flex items-center gap-4"
              >
                <select
                  class="h-9 w-full cursor-pointer appearance-none rounded border border-neutral bg-surface-neutral px-3 pr-6 text-sm text-neutral transition-colors hover:bg-surface-neutral-component focus:border-brand-strong focus:outline focus:outline-[2px] focus:outline-offset-0 focus:outline-brand-4 disabled:cursor-not-allowed disabled:bg-surface-neutral disabled:text-neutral-subtle disabled:hover:bg-surface-neutral"
                  data-testid="input-select-small"
                  name="arguments.2.type"
                >
                  <option
                    value="--set"
                  >
                    --set
                  </option>
                  <option
                    value="--set-string"
                  >
                    --set-string
                  </option>
                  <option
                    value="--set-json"
                  >
                    --set-json
                  </option>
                </select>
                <i
                  aria-hidden="true"
                  class="fa-regular fa-chevron-down pointer-events-none absolute right-3 top-2.5 translate-y-0.5 text-xs leading-3 text-neutral-subtle group-hover:text-neutral"
                />
              </div>
              <div
                class=""
                data-testid="input-small-wrapper"
              >
                <div
                  class="input input--small flex-grow"
                  data-testid="input"
                >
                  <label
                    class="hidden"
                  />
                  <input
                    autocomplete="off"
                    class="absolute left-0 top-0 h-full w-full rounded bg-transparent px-2 text-sm text-neutral placeholder:text-neutral-subtle"
                    data-testid="input-value"
                    name="arguments.2.key"
                    spellcheck="false"
                    type="text"
                    value="test3"
                  />
                </div>
              </div>
              <input
                class="w-full"
                data-testid="field-variable-suggestion"
                name="arguments.2.value"
                value="test"
              />
              <button
                class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm px-2.5 rounded-md bg-surface-neutral border border-neutral hover:border-neutral-component hover:bg-surface-neutral-subtle data-[state=open]:bg-surface-neutral-subtle text-neutral h-[36px] w-[36px]"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="fa-regular fa-trash "
                />
              </button>
            </div>
          </li>
        </ul>
      </form>
    </section>
  </div>
</body>
`;

exports[`ValuesOverrideArgumentsSetting should match snapshot for the v5-compatible base component 1`] = `
<body>
  <div>
    <section
      class="flex flex-col items-start"
    >
      <div
        class="flex w-full justify-between"
      >
        <div>
          <h1
            class="text-neutral text-2xl font-medium mb-2"
          >
            Value override as arguments
          </h1>
          <p
            class="mb-2 text-sm text-neutral-subtle"
          >
            Specify each override by declaring the variable name, value and its type.
          </p>
        </div>
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand-strong text-sm h-10 px-3 rounded-lg bg-surface-brand-solid hover:bg-surface-brand-solidHover border border-brand-component text-neutralInvert gap-2"
          type="button"
        >
          Add Variable
          <i
            aria-hidden="true"
            class="fa-regular fa-plus-circle "
          />
        </button>
      </div>
      <span
        aria-controls="radix-:rd:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="hover:text-brandHover mb-6 cursor-pointer text-sm font-medium text-brand transition"
        data-state="closed"
        type="button"
      >
        How it works 
        <i
          aria-hidden="true"
          class="fa-regular fa-circle-question text-xs"
        />
      </span>
      <button
        class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-8 px-2.5 rounded-md bg-surface-neutral border border-neutral hover:border-neutral-component hover:bg-surface-neutral-subtle data-[state=open]:bg-surface-neutral-subtle text-neutral mb-10 gap-2"
        type="button"
      >
        See default values.yaml 
        <i
          aria-hidden="true"
          class="fa-regular fa-arrow-up-right-from-square text-xs"
        />
      </button>
      <form
        class="w-full"
      >
        <ul>
          <li
            class="mb-3 grid grid-cols-[6fr_6fr_6fr_1fr] gap-x-2"
          >
            <span
              class="text-sm font-medium text-neutral-subtle"
            >
              Override type
            </span>
            <span
              class="text-sm font-medium text-neutral-subtle"
            >
              Variable
            </span>
            <span
              class="text-sm font-medium text-neutral-subtle"
            >
              Value
            </span>
            <span />
          </li>
          <li
            class="mb-3 last:mb-0"
          >
            <div
              class="grid grid-cols-[6fr_6fr_6fr_1fr] items-center gap-x-2"
            >
              <div
                class=" group relative flex items-center gap-4"
              >
                <select
                  class="h-9 w-full cursor-pointer appearance-none rounded border border-neutral bg-surface-neutral px-3 pr-6 text-sm text-neutral transition-colors hover:bg-surface-neutral-component focus:border-brand-strong focus:outline focus:outline-[2px] focus:outline-offset-0 focus:outline-brand-4 disabled:cursor-not-allowed disabled:bg-surface-neutral disabled:text-neutral-subtle disabled:hover:bg-surface-neutral"
                  data-testid="input-select-small"
                  name="arguments.0.type"
                >
                  <option
                    value="--set"
                  >
                    --set
                  </option>
                  <option
                    value="--set-string"
                  >
                    --set-string
                  </option>
                  <option
                    value="--set-json"
                  >
                    --set-json
                  </option>
                </select>
                <i
                  aria-hidden="true"
                  class="fa-regular fa-chevron-down pointer-events-none absolute right-3 top-2.5 translate-y-0.5 text-xs leading-3 text-neutral-subtle group-hover:text-neutral"
                />
              </div>
              <div
                class=""
                data-testid="input-small-wrapper"
              >
                <div
                  class="input input--small flex-grow"
                  data-testid="input"
                >
                  <label
                    class="hidden"
                  />
                  <input
                    autocomplete="off"
                    class="absolute left-0 top-0 h-full w-full rounded bg-transparent px-2 text-sm text-neutral placeholder:text-neutral-subtle"
                    data-testid="input-value"
                    name="arguments.0.key"
                    spellcheck="false"
                    type="text"
                    value="test"
                  />
                </div>
              </div>
              <input
                class="w-full"
                data-testid="field-variable-suggestion"
                name="arguments.0.value"
                value="test"
              />
              <button
                class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm px-2.5 rounded-md bg-surface-neutral border border-neutral hover:border-neutral-component hover:bg-surface-neutral-subtle data-[state=open]:bg-surface-neutral-subtle text-neutral h-[36px] w-[36px]"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="fa-regular fa-trash "
                />
              </button>
            </div>
          </li>
        </ul>
      </form>
    </section>
  </div>
</body>
`;
